applications/spa-token-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-token-demo
  namespace: applications
  labels:
    app.kubernetes.io/name: spa-token-demo
    owner: platform-team
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spa-token-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spa-token-demo
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: spa-token-demo
          image: ghcr.io/kse-api-sec-hermanhavva/spa-token-demo:981415a9239076840c7e89033e48c20477f146c5
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: kse-pki
              mountPath: /etc/kse-pki
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: kse-pki
          configMap:
            name: kse-labs-ca
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
